# open-stage

./: .gitignore  CLAUDE.md  LICENCE  README.md  anthropic_test.py  deepseek_test.py  gemini_test.py  index.html  pyproject.toml  requirements.txt  sample_01_csv_print.py  sample_02_csv_filter_delete_switch_agg.py  sample_03_delete_cols.py  sample_04_csv_to_bq.py  sample_05_bigquery_origin_printer.py  sample_06_anthropic_transformer_iris.py  sample_07_bq_iris_gemini_transformerr.py  sample_08_iris_filter.py  sample_09_iris_deepseek.py  sample_1.py  sample_10.py  sample_10_mysql_query.py  sample_11.py  sample_11_mysql_filter.py  sample_12.py  sample_12_postgres_agg.py  sample_13.py  sample_13_openai_sentiment.py  sample_1_csv_print.py  sample_2.py  sample_3.py  sample_3_delete_cols.py  sample_4.py  sample_4_csv_to_bq.py  sample_5.py  sample_5_bigquery_origin_printer.py  sample_6.py  sample_7.py  sample_8.py  sample_9.py  (+3 more)
docs/: APIRestOrigin.md  Aggregator.md  AnthropicPromptTransformer.md  CSVDestination.md  CSVOrigin.md  ClaudeQuickReference.md  ClaudeUltraCompact.md  Copy.md  DeepSeekPromptTransformer.md  DeleteColumns.md  Filter.md  Funnel.md  GCPBigQueryDestination.md  GCPBigQueryOrigin.md  GeminiPromptTransformer.md  Joiner.md  KnowledgeBaseUseGuide.md  MasterIndex.md  MySQLDesination.md  MySQLDestination.md  MySQLOrigin.md  OPEN_STAGE_KNOWLEDGE_BASE.md  OpenAIPromptTransformer.md  OpenOrigin.md  PostgresDestination.md  PostgresOrigin.md  Printer.md  RemoveDuplicates.md  StartHere.md  Switcher.md  Transformer.md  complex_pipelines.md
open_stage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
open_stage/anthropic/: claude.py
open_stage/core/: base.py  base_ai.py  common.py
open_stage/deepseek/: deepseek.py  transformer.py
open_stage/google/: bigquery.py  cloud.py  gemini.py
open_stage/mysql/: common.py
open_stage/open_ai/: chat_gpt.py  transformer.py
open_stage/postgres/: common.py
src/: core.py
src/anthropic/: claude.py
src/core/: base.py  common.py
src/deepseek/: __init__.py  deepseek.py
src/google/: cloud.py  gemini.py
src/mysql/: common.py
src/open_ai/: chat_gpt.py
src/postgres/: common.py
tests/: conftest.py  test_base.py  test_common.py
