[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-stage"
version = "0.1.0"
description = "ETL framework inspired by IBM DataStage, built on a Pipes and Filters architecture."
requires-python = ">=3.8"

dependencies = [
  "pandas>=1.3",
  "requests>=2.26",
  "python-dotenv>=0.19",
]

[project.optional-dependencies]
postgres = ["sqlalchemy>=1.4", "psycopg2-binary>=2.9"]
mysql    = ["sqlalchemy>=1.4", "pymysql>=1.0"]
bigquery = [
  "google-cloud-bigquery>=3.0",
  "db-dtypes>=1.0",
  "google-auth>=2.0",
  "pandas-gbq>=0.26.1",
]
anthropic = ["anthropic>=0.20"]
openai    = ["openai>=1.0"]
deepseek  = ["openai>=1.0"]
gemini    = ["google-genai>=1.0", "google-generativeai>=0.4"]
all = [
  "open-stage[postgres,mysql,bigquery,anthropic,openai,deepseek,gemini]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["open_stage*"]
